fixed home page white space

--- a/src/component/trainingProgram/TrainingProgram.module.css
+++ b/src/component/trainingProgram/TrainingProgram.module.css
@@ -32,7 +32,7 @@ z-index: 0;
     flex-direction: row;
     gap: 30px;
     /* border: 1px solid rgb(2, 153, 27); */
-    width: 800px;
+    /* width: 800px; */
     height: 260px;
     overflow-x: scroll;
 }
